{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 13,
  "lineage": "5a486be9-d573-095f-2670-9b7e112e0b38",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04169656fea786776",
            "arn": "arn:aws:ec2:us-east-1:106036894611:instance/i-05b8dec04d6f739e3",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05b8dec04d6f739e3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "dev-arzooo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ebfef5f8cf7d9848",
            "private_dns": "ip-10-0-1-241.ec2.internal",
            "private_ip": "10.0.1.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01b8c9ab8dbee80cf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05d18335ebb1efe9a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-086ec243220811d73",
            "tags": {
              "Name": "dev-arzooo-1"
            },
            "tags_all": {
              "Name": "dev-arzooo-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05d18335ebb1efe9a"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.allow_tls",
            "aws_subnet.Publicsubnet",
            "aws_vpc.terraformvpc",
            "tls_private_key.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tfigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:106036894611:internet-gateway/igw-059fb4e3e5b5a6dc7",
            "id": "igw-059fb4e3e5b5a6dc7",
            "owner_id": "106036894611",
            "tags": {
              "Name": "tfigw"
            },
            "tags_all": {
              "Name": "tfigw"
            },
            "vpc_id": "vpc-0ea637be966de7ed5"
          },
          "dependencies": [
            "aws_vpc.terraformvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:106036894611:route-table/rtb-0ad00fc8c1f814607",
            "id": "rtb-0ad00fc8c1f814607",
            "owner_id": "106036894611",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-059fb4e3e5b5a6dc7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "privateRT"
            },
            "tags_all": {
              "Name": "privateRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea637be966de7ed5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tfigw",
            "aws_vpc.terraformvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:106036894611:route-table/rtb-04ec1ac77a0052e3b",
            "id": "rtb-04ec1ac77a0052e3b",
            "owner_id": "106036894611",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-059fb4e3e5b5a6dc7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicRT"
            },
            "tags_all": {
              "Name": "publicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea637be966de7ed5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tfigw",
            "aws_vpc.terraformvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateRT_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087c01b15d88622fa",
            "route_table_id": "rtb-0ad00fc8c1f814607",
            "subnet_id": "subnet-0dd7b24ccb826ca92"
          },
          "dependencies": [
            "aws_internet_gateway.tfigw",
            "aws_route_table.privateRT",
            "aws_subnet.Privatesubnet",
            "aws_vpc.terraformvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicRT-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f81dd88421e3f2ad",
            "route_table_id": "rtb-04ec1ac77a0052e3b",
            "subnet_id": "subnet-086ec243220811d73"
          },
          "dependencies": [
            "aws_internet_gateway.tfigw",
            "aws_route_table.publicRT",
            "aws_subnet.Publicsubnet",
            "aws_vpc.terraformvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:106036894611:security-group/sg-05d18335ebb1efe9a",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d18335ebb1efe9a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "106036894611",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-SG"
            },
            "tags_all": {
              "Name": "terraform-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea637be966de7ed5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraformvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Privatesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:106036894611:subnet/subnet-0dd7b24ccb826ca92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd7b24ccb826ca92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "106036894611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Privatesubnet"
            },
            "tags_all": {
              "Name": "Privatesubnet"
            },
            "vpc_id": "vpc-0ea637be966de7ed5"
          },
          "dependencies": [
            "aws_vpc.terraformvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:106036894611:subnet/subnet-086ec243220811d73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086ec243220811d73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "106036894611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Publicsubnet"
            },
            "tags_all": {
              "Name": "Publicsubnet"
            },
            "vpc_id": "vpc-0ea637be966de7ed5"
          },
          "dependencies": [
            "aws_vpc.terraformvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraformvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:106036894611:vpc/vpc-0ea637be966de7ed5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09252a96abaca492a",
            "default_route_table_id": "rtb-0e57459276c0dfa76",
            "default_security_group_id": "sg-0d58f4f5a742749a8",
            "dhcp_options_id": "dopt-044cd50a3314595da",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ea637be966de7ed5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e57459276c0dfa76",
            "owner_id": "106036894611",
            "tags": {
              "Name": "terraform-test-vpc"
            },
            "tags_all": {
              "Name": "terraform-test-vpc"
            }
          }
        }
      ]
    }
  ]
}